# acentric

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.txt  Note.cpp  Note.h  README.md  main  main.cpp
acentric_core/: CMakeLists.txt
acentric_core/include/: BasicChord.h  BasicScale.h  Chord.h  CounterpointChecker.h  DiatonicScale.h  Interval.h  Note.h
acentric_core/src/: BasicChord.h  BasicScale.h  Chord.cpp  CounterpointChecker.cpp  CounterpointChecker.h  DiatonicScale.cpp  Interval.cpp  Interval.h  Note.cpp  main  main.cpp
acentric_core/src/tests/: IntervalTest.cpp  NoteTest.cpp
acentric_lang/: CMakeLists.txt
acentric_lang/flex_bison_prebuilt/: Lexer.cxx  Lexer.hxx  Parser.cxx  Parser.hxx  location.hh  position.hh  stack.hh
acentric_lang/include/: Lexer.h  MusicLexer.h  Reader.h
acentric_lang/src/: Lexer.l  MusicReader.cpp  Parser.y  Reader.cpp  acentric_lang_interactive.cpp  mparse_main.cpp
include/: BasicChord.h  BasicNote.h  BasicScale.h  Chord.h  DiatonicScale.h  Interval.h  Key.h  MusicLexer.h  MusicReader.h  Note.h  Scale.h
src/: Chord.cpp  DiatonicScale.cpp  Interval.cpp  MusicLexer.l  MusicParser.y  MusicReader.cpp  Note.cpp  Scale.cpp  main.cpp  mparse_main.cpp
src/tests/: NoteTest.cpp
